--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"dotenv": "^16.0.3",
 		"express": "^4.18.1",
 		"joi": "^17.6.1",
+		"cors": "^2.8.5",
 		"multer": "^1.4.5-lts.1"
 	},
 	"devDependencies": {
